Fixed alignments

--- a/css/advanced.scss
+++ b/css/advanced.scss
@@ -63,7 +63,6 @@ $darkLinksColor: rgb(213, 213, 213);
   }
 }
 // End of darkMode section
-
 a {
   text-decoration: none;
 }
@@ -127,11 +126,6 @@ input::-webkit-inner-spin-button {
   word-spacing: 1.1vw;
 }
 
-input[type="submit"] {
-  @extend %button;
-  color: $linksColor;
-}
-
 form {
   display: table;
   border-spacing: 0 17px;
@@ -149,6 +143,20 @@ span {
 #sixAndSeven {
   display: flex;
   flex-direction: row;
+}
+select {
+  width: 40.8vw;
+  height: 3.5vh;
+  margin-left: 8.3vw;
+}
+
+#secondHeading {
+  margin-bottom: 1.5vh;
+}
+
+input[type="submit"] {
+  @extend %button;
+  color: $linksColor;
 }
 
 #darkLight {
